--- a/public/views/menuPrincipal.html
+++ b/public/views/menuPrincipal.html
@@ -19,8 +19,9 @@
            <div class="btn-group">
                 <div class="text-right">
                     <a href='#!listar' class="btn btn-default">Controle de Alunos e Tarefas</a>
-                    <a href='#!listarTarefas/:id' class="btn btn-default">Verificar Tarefas e Avaliação</a> 
-              </div>  
+                    <a href='#!listarTarefas/:id' class="btn btn-default">Listar Tarefas</a> 
+                    <a href='#!listarTarefas/:id' class="btn btn-default">Avaliação e FeedBack</a> 
+                </div>  
             </div>    
         
            <!--  <div class="btn-group">
